# python-config-install-test

./: README.md  setup.cfg
.github/workflows/: testconfig.yml
config/: testpkg.conf
src/testpkg/: __init__.py  __main__.py
