[metadata]
name = testpkg
version = attr: testpkg.VERSION
description = My package description
long_description = file: README.rst
keywords = one, two
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    requests[socks]

[options.packages.find]
where=src

[options.data_files]
etc/testpkg =
    config/testpkg.conf
